src/test/ui/borrowck/borrowck-union-uninitialized.stderr
error[E0381]: binding `s` isn't fully initialized
  --> $DIR/borrowck-union-uninitialized.rs:13:9
   |
LL |         let mut s: S;
   |             ----- variable declared here
LL |         let mut u: U;
LL |         s.a = 0;
   |         ^^^^^^^ `s` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate, or use `std::mem::MaybeUninit`

error[E0381]: binding `u` isn't fully initialized
  --> $DIR/borrowck-union-uninitialized.rs:14:9
   |
LL |         let mut u: U;
   |             ----- variable declared here
LL |         s.a = 0;
LL |         u.a = 0;
   |         ^^^^^^^ `u` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate, or use `std::mem::MaybeUninit`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
